--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -391,7 +391,7 @@ button:not(:disabled),
 }
 
 textarea {
-  resize: vertical;
+  resize: none;
 }
 
 fieldset {
@@ -4624,7 +4624,6 @@ textarea.form-control-lg {
 .card-img-top,
 .card-img-bottom {
   width: 100%;
-  height: 157px;
 }
 
 .card-img,
@@ -11765,6 +11764,10 @@ body {
   }
 }
 
+.rate, .rating{
+  font-size: 35px;
+}
+
 .rate-base-layer
 {
   color: #aaa;
@@ -11777,4 +11780,15 @@ body {
 .rate-select-layer
 {
   color: orange;
+}
+
+.product-name{
+  color: inherit;
+  text-decoration: none;
+}
+
+.reviews-members .media .me-3 {
+  width: 56px;
+  height: 56px;
+  object-fit: cover;
 }
