--- a/src/main/resources/templates/admin/admin-view.html
+++ b/src/main/resources/templates/admin/admin-view.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments :: html_head(pageTitle='Dashboard - SB Admin')" />
     <body class="sb-nav-fixed">
-        <nav th:replace="fragments :: navbar"></nav>
+        <nav th:replace="fragments :: adminNavbar"></nav>
         <div id="layoutSidenav">
             <div th:replace="fragments :: sidenav"></div>
             <div id="layoutSidenav_content">
@@ -52,15 +52,15 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-area me-1"></i>
-                                        Area Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
+<!--                            <div class="col-xl-6">-->
+<!--                                <div class="card mb-4">-->
+<!--                                    <div class="card-header">-->
+<!--                                        <i class="fas fa-chart-area me-1"></i>-->
+<!--                                        Area Chart Example-->
+<!--                                    </div>-->
+<!--                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>-->
+<!--                                </div>-->
+<!--                            </div>-->
                             <div class="col-xl-6">
                                 <div class="card mb-4">
                                     <div class="card-header">
@@ -70,6 +70,15 @@
                                     <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
                                 </div>
                             </div>
+<!--                            <div class="col-xl-6">-->
+<!--                                <div class="card mb-4">-->
+<!--                                    <div class="card-header">-->
+<!--                                        <i class="fas fa-chart-pie me-1"></i>-->
+<!--                                        Pie Chart Example-->
+<!--                                    </div>-->
+<!--                                    <div class="card-body"><canvas id="myPieChart" width="100%" height="40"></canvas></div>-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                         <div class="card mb-4">
                             <div class="card-header">
@@ -282,6 +291,7 @@
         <script th:src="@{/js/scripts.js}"></script>
         <script th:src="@{/assets/demo/chart-area-demo.js}"></script>
         <script th:src="@{/assets/demo/chart-bar-demo.js}"></script>
+        <script th:src="@{/assets/demo/chart-pie-demo.js}"></script>
         <script th:src="@{/js/datatables-simple-demo.js}"></script>
     </body>
 </html>
