--- a/src/main/resources/templates/admin/product/product-detail.html
+++ b/src/main/resources/templates/admin/product/product-detail.html
@@ -7,7 +7,7 @@
         }
     </style>
     <body class="sb-nav-fixed">
-        <nav th:replace="fragments :: navbar"></nav>
+        <nav th:replace="fragments :: adminNavbar"></nav>
         <div id="layoutSidenav">
             <div th:replace="fragments :: sidenav"></div>
             <div id="layoutSidenav_content">
