--- a/src/main/resources/templates/admin/tables.html
+++ b/src/main/resources/templates/admin/tables.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments :: html_head(pageTitle='Tables - SB Admin')" />
     <body class="sb-nav-fixed">
-        <nav th:replace="fragments :: navbar"></nav>
+        <nav th:replace="fragments :: adminNavbar"></nav>
         <div id="layoutSidenav">
             <div th:replace="fragments :: sidenav"></div>
             <div id="layoutSidenav_content">
