--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" th:fragment="navbar">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" th:fragment="adminNavbar">
         <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" href="admin/admin-view.html">Start Bootstrap</a>
         <!-- Sidebar Toggle-->
@@ -48,6 +48,33 @@
                 </ul>
             </li>
         </ul>
+    </nav>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="homeNavbar">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" th:href="@{/home}">My Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <th:block th:each="c: ${categoryList}">
+                        <li class="nav-item" th:if="${#lists.isEmpty(c.categoryDTOList)}"><a class="nav-link" href="#!" th:text="${c.name}"></a></li>
+                        <li class="nav-item dropdown" th:unless="${#lists.isEmpty(c.categoryDTOList)}">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${c.name}"></a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li th:each="child: ${c.categoryDTOList}"><a class="dropdown-item" href="#" th:text="${child.name}"></a></li>
+                            </ul>
+                        </li>
+                    </th:block>
+                </ul>
+                <form class="d-flex" method="get" th:action="@{/cart}">
+                    <button class="btn btn-outline-dark" type="submit">
+                        <i class="bi-cart-fill me-1"></i>
+                        Cart
+                    </button>
+                </form>
+            </div>
+        </div>
     </nav>
 
     <!-- Sidenav-->
