--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,31 +3,8 @@
     <head th:replace="fragments :: html_head(pageTitle='Shop HomePage')" />
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">My Shop</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <th:block th:each="c: ${categoryList}">
-                            <li class="nav-item" th:if="${#lists.isEmpty(c.categoryDTOList)}"><a class="nav-link" href="#!" th:text="${c.name}"></a></li>
-                            <li class="nav-item dropdown" th:unless="${#lists.isEmpty(c.categoryDTOList)}">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${c.name}"></a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li th:each="child: ${c.categoryDTOList}"><a class="dropdown-item" href="#" th:text="${child.name}"></a></li>
-                                </ul>
-                            </li>
-                        </th:block>
-                    </ul>
-                    <form class="d-flex" method="get" th:action="@{/cart}">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </nav>
+        <nav th:replace="fragments :: homeNavbar"></nav>
+
         <!-- Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
@@ -43,13 +20,15 @@
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5" th:each="p: ${productList}">
                         <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div th:if="${p.sale != 0}" class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" th:src="|@{/images/}${p.image}|" alt="..." style="border-bottom: 2px solid #000;" />
+                            <img class="card-img-top" th:src="|@{/images/}${p.image}|" alt="..." style="border-bottom: 2px solid #000; height: 157px;" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder" th:text="${p.name}"></h5>
+                                    <a class="product-name" th:href="|@{/detail/}${p.id}|"><h5 class="fw-bolder" th:text="${p.name}"></h5></a>
                                     <!-- Product price-->
                                     <span th:unless="${p.sale != 0}" th:text="'$'+${p.price}"></span>
                                     <th:block th:if="${p.sale != 0}" th:with="salePrice = ${p.price - (p.price * p.sale / 100)}">
@@ -96,7 +75,6 @@
                     </div>
                 </div>
             </div>
-            <div class="rate" style="text-align: center; font-size: 35px;"></div>
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
@@ -122,13 +100,6 @@
                     }
                 })
             }
-            $(document).ready(function() {
-                $(".rate").rate();
-
-                $(".rate").on("change", function(ev, data){
-                    console.log(data.to);
-                });
-            })
         </script>
     </body>
 </html>
