--- a/src/main/resources/templates/item-detail.html
+++ b/src/main/resources/templates/item-detail.html
@@ -17,6 +17,7 @@
                                 <span class="text-muted text-decoration-line-through" th:text="'$' + ${product.price}"></span>
                                 <span th:text="'$'+${salePrice}"></span>
                             </th:block>
+                            <div class="rate" th:attr="data-rate-value=${product.avgRate}"></div>
                         </div>
                         <div class="d-flex">
                             <input class="form-control text-center me-3" id="inputQuantity" type="num" th:value="${product.amount}" style="max-width: 3rem" />
@@ -30,14 +31,15 @@
             </div>
         </section>
         <section class="py-5 bg-light">
+            <th:block th:each="item: ${session.cart}" th:if="${item.value.product.id == product.id}">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="rounded p-4 mb-5">
                     <h5 class="mb-4">Leave Comment</h5>
                     <p class="mb-1">Rate the Product</p>
-                    <form th:object="${rating}" method="post" th:action="|@{/detail/}${product.id}|">
+                    <form th:object="${rateDto}" method="post" th:action="|@{/home/detail/}${product.id}|">
                         <div class="mb-2">
                             <div class="rating"></div>
-                            <input id="rateValue" type="number" th:field="*{star}" hidden/>
+                            <input id="rateValue" type="text" th:field="*{star}" required style="display: none;"/>
                         </div>
                         <div class="mb-3">
                             <label>Your Comment</label>
@@ -49,6 +51,7 @@
                     </form>
                 </div>
             </div>
+            </th:block>
             <div class="rounded p-4 mb-4 restaurant-detailed-ratings-and-reviews">
                 <h5 class="mb-1">All Ratings and Reviews</h5>
                 <th:block th:each="r: ${ratingList}">
@@ -61,7 +64,6 @@
                                         <h6 class="mb-1">User</h6>
                                         <p class="text-gray" th:text="${#temporals.format(r.date, 'HH:mm dd/MM/yyyy')}">Tue, 20 Mar 2020</p>
                                     </div>
-<!--                                    <div class="rate ms-5" data-rate-value="5"></div>-->
                                     <div class="rate ms-5" th:attr="data-rate-value=${r.star}"></div>
                                 </div>
                                 <div class="reviews-body">
@@ -98,6 +100,8 @@
                     }
                 })
             }
+
+
             $(document).ready(function() {
                 $('.rate').rate({
                     readonly: true
