--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
+    <link rel="stylesheet"
+          href="https://code.highcharts.com/css/highcharts.css" />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <link th:href="@{/toastr/toastr.min.css}" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -31,7 +34,7 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-            <div class="input-group">
+            <div class="input-group" style="display: none">
                 <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
                 <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
             </div>
@@ -41,10 +44,10 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#!">Settings</a></li>
-                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><a class="dropdown-item" href="#">Activity Log</a></li>
                     <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    <li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -58,15 +61,27 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <th:block th:each="c: ${categoryList}">
-                        <li class="nav-item" th:if="${#lists.isEmpty(c.categoryDTOList)}"><a class="nav-link" href="#!" th:text="${c.name}"></a></li>
+                        <li class="nav-item" th:if="${#lists.isEmpty(c.categoryDTOList)}"><a class="nav-link" th:href="|@{/home/category/}${c.id}|" th:text="${c.name}"></a></li>
                         <li class="nav-item dropdown" th:unless="${#lists.isEmpty(c.categoryDTOList)}">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${c.name}"></a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" th:href="|@{/home/category/}${c.id}|" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${c.name}"></a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li th:each="child: ${c.categoryDTOList}"><a class="dropdown-item" href="#" th:text="${child.name}"></a></li>
+                                <li th:each="child: ${c.categoryDTOList}"><a class="dropdown-item" th:href="|@{/home/category/}${child.id}|" th:text="${child.name}"></a></li>
                             </ul>
                         </li>
                     </th:block>
                 </ul>
+                <form class="d-flex me-2" method="get" th:action="@{/logout}" sec:authorize="isAuthenticated()">
+                    <button class="btn btn-outline-danger" type="submit">
+                        <i class="bi-box-arrow-in-left me-1"></i>
+                        Logout
+                    </button>
+                </form>
+                <form class="d-flex me-2" method="get" th:action="@{/login}" sec:authorize="!isAuthenticated()">
+                    <button class="btn btn-outline-dark" type="submit">
+                        <i class="bi-box-arrow-in-right me-1"></i>
+                        Login
+                    </button>
+                </form>
                 <form class="d-flex" method="get" th:action="@{/cart}">
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
@@ -113,7 +128,7 @@
                             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="login.html">Login</a>
-                                    <a class="nav-link" href="register.html">Register</a>
+                                    <a class="nav-link" href="sign-up.html">Register</a>
                                     <a class="nav-link" href="password.html">Forgot Password</a>
                                 </nav>
                             </div>
@@ -143,7 +158,7 @@
             </div>
             <div class="sb-sidenav-footer">
                 <div class="small">Logged in as:</div>
-                Start Bootstrap
+                <span sec:authentication="name"></span>
             </div>
         </nav>
     </div>
