--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,60 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="fragments :: html_head(pageTitle='Login - SB Admin')" />
-    <body class="bg-primary">
-        <div id="layoutAuthentication">
-            <div id="layoutAuthentication_content">
-                <main>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-5">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
-                                    <div class="card-body">
-                                        <form>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                                                <label for="inputEmail">Email address</label>
-                                            </div>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
-                                                <label for="inputPassword">Password</label>
-                                            </div>
-                                            <div class="form-check mb-3">
-                                                <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
-                                                <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
-                                            </div>
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="admin/admin-view.html">Login</a>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </main>
+<head th:replace="fragments :: html_head(pageTitle='Login')"/>
+<body>
+<div class="container mt-5">
+    <h1 class="text-center">Login Form</h1>
+    <div th:if="${param.error}">
+        <h3 class="text-danger text-center">Invalid username or password.</h3>
+    </div>
+    <div th:if="${param.logout}">
+        <h3 class="text-warning text-center">You have been logged out</h3>
+    </div>
+    <section class="w-100 p-4 d-flex justify-content-center pb-4 mt-3">
+        <form style="width: 22rem;" method="post" th:action="@{/login}">
+            <!-- Username input -->
+            <div class="form-outline mb-4">
+                <input type="email" name="username" id="form2Example1" class="form-control" placeholder="Email">
+                <div class="form-notch">
+                    <div class="form-notch-leading" style="width: 9px;"></div>
+                    <div class="form-notch-middle" style="width: 88.8px;"></div>
+                    <div class="form-notch-trailing"></div>
+                </div>
             </div>
-            <div id="layoutAuthentication_footer">
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2022</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
+
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+                <input type="password" name="password" id="form2Example2" class="form-control" placeholder="Password">
+                <div class="form-notch">
+                    <div class="form-notch-leading" style="width: 9px;"></div>
+                    <div class="form-notch-middle" style="width: 64px;"></div>
+                    <div class="form-notch-trailing"></div>
+                </div>
             </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script th:src="@{/js/scripts.js}"></script>
-    </body>
+
+            <!-- 2 column grid layout for inline styling -->
+<!--            <div class="row mb-4">-->
+<!--                <div class="col d-flex justify-content-center">-->
+<!--                    &lt;!&ndash; Checkbox &ndash;&gt;-->
+<!--                    <div class="form-check">-->
+<!--                        <input class="form-check-input" type="checkbox" name="remember-me">-->
+<!--                        <label class="form-check-label"> Remember me </label>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="col">-->
+<!--                    &lt;!&ndash; Simple link &ndash;&gt;-->
+<!--                    <a th:href="@{/forgot-password}">Forgot password?</a>-->
+<!--                </div>-->
+<!--            </div>-->
+
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-block mb-4" style="width: 100%">Sign in</button>
+
+            <!-- Register buttons -->
+            <div class="text-center">
+                <p>Not a member? <a th:href="@{/sign-up}">Register</a></p>
+                <p>or sign up with:</p>
+                <a class="btn btn-link btn-floating mx-1" th:href="@{/oauth2/authorization/facebook}">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+
+                <a class="btn btn-link btn-floating mx-1" th:href="@{/oauth2/authorization/google}">
+                    <i class="fab fa-google"></i>
+                </a>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-twitter"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-github"></i>
+                </button>
+            </div>
+        </form>
+    </section>
+</div>
+</body>
 </html>
