--- a/src/main/resources/templates/password.html
+++ b/src/main/resources/templates/password.html
@@ -24,7 +24,7 @@
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="sign-up.html">Need an account? Sign up!</a></div>
                                     </div>
                                 </div>
                             </div>
